[package]
name = "leptos-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.0", optional = true }
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
leptos_router = { version = "0.8.0", features = ["nightly"] }
log = "0.4"
simple_logger = "5.0"
tokio = { version = "1", features = ["full"], optional = true }
wasm-bindgen = { version = "=0.2.100" }
web-sys = { version = "0.3.70" }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = "1.0"
serde = { version = "1.0", features = ["derive"] }
server_fn = { version = "0.8.0", features = ["serde-lite"] }

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "leptos-app"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
